--- a/intro/vectors.ipynb
+++ b/intro/vectors.ipynb
@@ -40,6 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
     "import numpy as np\n",
     "import random\n",
     "from matplotlib import pyplot as plt"
@@ -51,6 +52,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ROOT_DIR = '..'\n",
+    "if ROOT_DIR not in sys.path:\n",
+    "    sys.path.append(ROOT_DIR)\n",
+    "\n",
     "import faai"
    ]
   },
