Add SVC to steel_faults nb

--- a/ml_supervised/steel_faults.ipynb
+++ b/ml_supervised/steel_faults.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Steel faults."
+    "Steel plate faults."
    ]
   },
   {
@@ -75,6 +75,7 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn.svm import SVC\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import accuracy_score"
    ]
@@ -1096,7 +1097,8 @@
     "estimators = {\n",
     "    'decision_tree': DecisionTreeClassifier(random_state=24),\n",
     "    'random_forest': RandomForestClassifier(random_state=24),\n",
-    "    'adaboost': AdaBoostClassifier(random_state=24)\n",
+    "    'adaboost': AdaBoostClassifier(random_state=24),\n",
+    "    'svm': SVC(random_state=24),\n",
     "}"
    ]
   },
@@ -1124,6 +1126,9 @@
       "\n",
       "adaboost\n",
       "Number of matches: 273 out of 486 (accuracy = 0.562)\n",
+      "\n",
+      "svm\n",
+      "Number of matches: 365 out of 486 (accuracy = 0.751)\n",
       "\n"
      ]
     }
