Fix formulas in reservoir nb

--- a/dynamic_model/reservoir.ipynb
+++ b/dynamic_model/reservoir.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "Flow of two streams into a reservoir (example from Smith & Campbell).\n",
     "\n",
-    "$\\rho A \\frac{dh(t)}{ht} + C_v \\sqrt{h(t)} = w_1(t) + w_2(t)$"
+    "$\\rho A \\frac{dh(t)}{dt} + C_v \\sqrt{h(t)} = w_1(t) + w_2(t)$"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\frac{dh(t)}{ht} = \\frac{1}{\\rho A } [w_1(t) + w_2(t) - C_v \\sqrt{h(t)}]$\n",
+    "$\\frac{dh(t)}{dt} = \\frac{1}{\\rho A } [w_1(t) + w_2(t) - C_v \\sqrt{h(t)}]$\n",
     "\n",
     "$\\rho$ - liquid density\n",
     "\n",
