Add printoout of v_sim in vehicle_closed_loop_p_only nb

--- a/control/vehicle_closed_loop_p_only.ipynb
+++ b/control/vehicle_closed_loop_p_only.ipynb
@@ -214,21 +214,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "        0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "        0.        ,  0.        ,  0.        ,  5.05010865,  8.33049032,\n",
+       "        9.35621672,  9.67521851,  9.77426157,  9.80499621,  9.8145321 ,\n",
+       "        9.81749061,  9.81840845,  9.81869322,  9.81878158,  9.81880898,\n",
+       "        9.81881747,  9.81882011,  9.81882094,  9.81882119,  9.81882127,\n",
+       "        9.81882129,  9.8188213 ,  9.81882131,  9.81882131,  9.81882131,\n",
+       "        9.81882131,  9.81882131,  9.8188213 ,  9.8188213 ,  9.8188213 ,\n",
+       "        9.8188213 ,  9.8188213 ,  9.8188213 ,  9.8188213 ,  9.8188213 ,\n",
+       "        9.8188213 ,  9.8188213 ,  9.8188213 ,  9.8188213 ,  9.8188213 ,\n",
+       "       11.95342076, 13.79236958, 14.35383771, 14.52475482, 14.57673667,\n",
+       "       14.59254181, 14.59734696, 14.59880779, 14.59925191, 14.59938696,\n",
+       "       14.59942799, 14.59944045, 14.59944424, 14.59944542, 14.59944577,\n",
+       "       14.59944587, 14.5994459 , 14.59944592, 14.59944592, 14.59944592,\n",
+       "       14.59944592, 14.59944592, 14.59944592, 14.59944592, 14.59944592,\n",
+       "       11.79609938, 10.43074485, 10.00852106,  9.87766034,  9.83707435,\n",
+       "        9.82448404,  9.82057811,  9.81936634,  9.8189904 ,  9.81887375,\n",
+       "        9.81883757,  9.81882636,  9.81882288,  9.81882179,  9.81882145,\n",
+       "        9.81882135,  9.81882132,  9.81882131,  9.8188213 ,  9.8188213 ,\n",
+       "        9.8188213 ,  9.8188213 ,  9.8188213 ,  9.8188213 ,  9.8188213 ])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v_sim.reshape(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
