Fix formula in vehicle_closed_loop_pi_iterative nb

--- a/control/vehicle_closed_loop_pi_iterative.ipynb
+++ b/control/vehicle_closed_loop_pi_iterative.ipynb
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\frac{dv(t)}{dt} = \\frac{1}{m} [ F_p K_c (v_{SP}(t) - v(t)) - \\frac{1}{2} \\rho A C_d v(t)^2 ] - g sin(\\theta)$"
+    "$\\frac{dv(t)}{dt} = \\frac{1}{m} [ F_p K_c (v_{SP}(t) - v(t)) + \\frac{K_c}{\\tau_i} \\int e(t) dt - \\frac{1}{2} \\rho A C_d v(t)^2 ] - g sin(\\theta(t))$"
    ]
   },
   {
