Fixes in vehicle_fopdt_optimization nb

--- a/control/vehicle_fopdt_optimization.ipynb
+++ b/control/vehicle_fopdt_optimization.ipynb
@@ -67,6 +67,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -262,12 +269,19 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cost function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# globals: t, v_sim\n",
+    "# globals: t, v_sim, step_input\n",
     "\n",
     "def fopdt_cost(params):\n",
     "    \n",
@@ -277,8 +291,8 @@
     "\n",
     "    fopdt_sim = odeint(fopdt_model, 0, t)\n",
     "    \n",
-    "    rms = np.sum(np.square(v_sim - fopdt_sim))\n",
-    "    return rms"
+    "    sse = np.sum(np.square(v_sim - fopdt_sim))\n",
+    "    return sse"
    ]
   },
   {
@@ -304,6 +318,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28.93888946330982"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fopdt_cost([0.9, 14., 0.8])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -318,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +369,7 @@
        "       x: array([ 0.90727137, 14.33811766,  0.87604393])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
